Bugfix: Removes double border on abbrs in Firefox.
Firefox and Safari are the only browsers that support the CSS3 text-decoration property. Firefox, in particular, styles abbreviations with a dotted underline. This update removes the underline in favor of the more universal bottom border.

--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -415,7 +415,9 @@ small{
 
 abbr{
 	// box model
-	border-bottom: 1px dashed mix($tint, $black, 75%);
+	border-bottom: 1px dotted mix($tint, $black, 75%);
+	// typography
+	text-decoration: none;
 	// misc
 	cursor: help;
 }
